[package]
name = "serde_6570"
version = "0.1.0"
edition = "2024"

authors = ["Judson Lester <nyarly+serde_6570@gmail.com>"]
categories = ["web-programming" ]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/nyarly/serde_6570"
repository = "https://github.com/nyarly/serde_6570"
description = "A Serde implementation for a subset of RFC 6570 URI Template"

exclude = [
    "tests/conformance_test.rs",
    "/tests/testcases", # submodule from the RFC 6570 project
    "flake.*",
    "TODO"
]

[dependencies]

serde = { version = "1.0.204", features = ["derive"] }

nom = "7.1.3"
thiserror = "1.0.63"
axum = { version = "0.7", features = ["macros", "json"]}
hyper = { version = "1.4", features = ["client", "http1"] }
tracing = "0.1"
iri-string = { version = "0.7.4", features = ["serde"] }
percent-encoding = "2.3.1"
regex = "1.10.6"
typemap-ors = "1.0.0"

[dev-dependencies]
serde_json = "1.0.149"
table-test = "0.2.1"
tracing-test = "0.2.5"
